2008-07-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printModules):
	Implemented support for combinations of srcip, dstip, srcport,
	dstport options of the hashlimit module for iptables per bug
	#1812388: "add srcip,dstip to choices for hashlimit mode"

2008-07-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* fwbuilder.1: updated man page for fwbuilder GUI.

	* ipt.cpp (main): document iptables version settings from the
	firewall object in generated script (for support and debugging).

	* MangleTableCompiler_ipt.cpp (flushAndSetDefaultPolicy): iptables
	rule with target TCPMSS generated for option "Clamp MSS to MTU" is
	valid only in mangle table in iptables 1.3.x and later. Still
	generate this command in the filter table for earlier versions of
	iptables

	* PrefsDialog.cpp (PrefsDialog::getFontDescription): Tab "Fonts"
	of the Preferences dialog shows currently selected fonts for both
	the tree and rules.

2008-07-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::addToLog): fixes in built-in
	installer; pretty printing of the external process output;
	properly enable "next" and "finish" buttons.

2008-07-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printProtocol):
	compiler for iptables distinguishes ICMPService and ICMP6Service

	* objects_init.xml.in: Added few standard ICMP6 objects

	* ObjectManipulator.cpp (ObjectManipulator::newICMP6): Added
	support for ICMP6Service object type in the GUI

	* ICMP6Service.cpp (ICMP6Service::ICMP6Service): Added class
	ICMP6Service

	* fwbuilder.dtd.in: Added XML element ICMP6Service

2008-06-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printProtocol): do not
	generate "-m icmp6 --icmp6-type any" for ipv6 for object "any
	icmp".

2008-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::loadDataFromDNS): object